# DataLoggerGUI

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
DataLoggerGUI_2.0/online_access_tool/: Dockerfile  Dockerfile-wildfly  docker-compose.yml  package-lock.json  package.json  pom.xml  sonar-project.properties
DataLoggerGUI_2.0/online_access_tool/src/main/java/nl/han/oose/project/business/decoding/: ConcreteJsonParser.java  DecoderV2.java  JsonParser.java  SensorConfig.java
DataLoggerGUI_2.0/online_access_tool/src/main/java/nl/han/oose/project/business/exceptions/: CarNotFoundException.java  DatabaseException.java  UnauthorizedException.java  UserNotFoundException.java
DataLoggerGUI_2.0/online_access_tool/src/main/java/nl/han/oose/project/business/scheduler/: RaceDataScheduler.java
DataLoggerGUI_2.0/online_access_tool/src/main/java/nl/han/oose/project/business/services/: RaceDataService.java  (+3 more)
DataLoggerGUI_2.0/online_access_tool/src/main/java/nl/han/oose/project/crosscutting_concerns/: Authentication.java
DataLoggerGUI_2.0/online_access_tool/src/main/java/nl/han/oose/project/filter/: CORSFilter.java
DataLoggerGUI_2.0/online_access_tool/src/test/java/nl/han/oose/project/crosscutting_concerns/: AuthenticationTest.java
GUIDev/: app.js  dark-mode.css  data.php  gps.php  home.php  index.php  trial.html
GUIDev/admin/: admin.php  app.css  finishEvent.php  startEvent.php
GUIDev/backend/: db_conn.php  login.php
GUIDev/css/: dark-mode.css  style.css
GUIDev/data/: ID-data.json  fake-data.json
GUIDev/gps/: enterLocation.php  gps.php  liveLocation.php  variabels.php
app/: app.py
app/lib/: event_data_streamer.py  mysql_queries.py
scripts/: entry.sh  test.sh
static/css/: event.css  home.css  root.css  style.css
static/js/: event.js  root.js
static/json/: event.json  event_config.json
templates/: event.html.jinja2  home.html.jinja2  index.html.jinja2  root.html.jinja2
templates/base/: base.html.jinja2
(+46 files in other folders)
